<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.WalksActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titleDay"
        android:textSize="22sp"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="5dp"
        android:onClick="onClickTitle"/>

    <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:id="@+id/backButtonWalks"
        android:src="@drawable/backbutton"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickBack"/>

    <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:id="@+id/settingsButtonWalks"
        android:src="@drawable/settingsicon"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:onClick="onClickSettings"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listViewWalks"
        android:layout_below="@id/settingsButtonWalks"/>

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/addButtonWalks"
        android:src="@drawable/plusbutton"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:onClick="onClickAddWalk"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/okButtonDay"
        android:text="@string/ok"
        android:visibility="gone"
        android:layout_toLeftOf="@id/settingsButtonWalks"
        android:layout_toStartOf="@id/settingsButtonWalks"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:onClick="onClickOkWalks"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTitleDay"
        android:hint="@string/hintInputDay"
        android:visibility="gone"
        android:layout_alignBottom="@id/okButtonDay"
        android:layout_toLeftOf="@id/okButtonDay"
        android:layout_toStartOf="@id/okButtonDay"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/addDistrictMessage"
        android:text="@string/addDistractMessage"
        android:textSize="20sp"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

</RelativeLayout>